--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   "contributors": [],
   "devDependencies": {
     "@jasonpincin/standard": "~5.0.0-7",
-    "istanbul": "~0.3.17",
+    "istanbul": "^0.4.0",
     "jquery": "^2.1.4",
     "opn": "~1.0.2",
     "phantomjs": "~1.9.18",
+    "run-browser": "^2.0.2",
     "tap-dot": "~1.0.0",
     "tap-spec": "~4.1.0",
     "tape": "~4.2.0",
